fix(inoreader): sidebar contrast issues

--- a/styles/inoreader/catppuccin.user.css
+++ b/styles/inoreader/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name inoreader Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/inoreader
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/inoreader
-@version 0.0.6
+@version 0.0.7
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/inoreader/catppuccin.user.css
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Ainoreader
 @description Soothing pastel theme for inoreader
@@ -186,8 +186,9 @@
 
     #tree_pane .plus_img,
     #tabs_pane .nav-item a i,
+    #tabs_pane .nav-item a span,
     #tabs_pane #bottom_tabs .nav-item a i {
-      color: @text;
+      color: @crust;
     }
 
     #hint-pref {
